src/objects/Richiesta_Voucher__c.object
<CustomObject>
    <description>Oggetto utilizzato per la richiesta dei Voucher ad Hybris</description>
    <fields>
        <fullName>Codice_promozione__c</fullName>
        <label>Codice promozione</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dollaro</fullName>
                </value>
                <value>
                    <fullName>Euro</fullName>
                </value>
                <value>
                    <fullName>Yen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Descrizione__c</fullName>
        <label>Descrizione</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Voucher_da_generare__c</fullName>
        <label>Numero Voucher da generare</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_massimo_utilizzi_per_utente__c</fullName>
        <description>redemptionQuantityLimitPerUser</description>
        <label>Numero massimo utilizzi per utente</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_totale_utilizzi__c</fullName>
        <description>redemptionQuantityLimit</description>
        <label>Numero totale utilizzi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priorit__c</fullName>
        <label>Priorità</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Restrizioni__c</fullName>
        <description>00 Nessuna restrizione
10 Restrizione per numero di Ordini (per clienti regolari)
20 Restrizione per revenue (per clienti regolari)
30 Restrizione per nuovi clienti
40 Restrizione per valore dell&apos;ordine
50 Restrizione per prodotto
60 Restrizione per categoria prodotto
70 Restrizione per quantità ordinata
80 Restrizione per utente
90 Restrizione temporanea</description>
        <inlineHelpText>Scegliere quali restrizioni applicare alla richiesta dei voucher</inlineHelpText>
        <label>Restrizioni</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                    <default>true</default>
                    <label>00</label>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sconto__c</fullName>
        <label>Sconto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spedizione_gratuita__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spedizione gratuita</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stato__c</fullName>
        <description>N - nuovo
I - In eleaborazione
C - Chiuso
E - Errore</description>
        <label>Stato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Testo_promozione__c</fullName>
        <label>Testo promozione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Voucher__c</fullName>
        <label>Tipo Voucher</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valido_per_gli_store__c</fullName>
        <label>Valido per gli store</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valore__c</fullName>
        <label>Valore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Richiesta Voucher</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RV-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Richieste Vouchers</pluralLabel>
    <recordTypes>
        <fullName>Promotional_Voucher</fullName>
        <active>true</active>
        <description>Singolo Voucher Code utilizzabile più volte e con limite per utente</description>
        <label>Promotional Voucher</label>
    </recordTypes>
    <recordTypes>
        <fullName>Promotional_voucher_chiuso</fullName>
        <active>true</active>
        <label>Promotional voucher chiuso</label>
    </recordTypes>
    <recordTypes>
        <fullName>Serial_Voucher</fullName>
        <active>true</active>
        <description>Più Voucher Codes utilizzabili una sola volta</description>
        <label>Serial Voucher</label>
    </recordTypes>
    <recordTypes>
        <fullName>Serial_voucher_chiuso</fullName>
        <active>true</active>
        <label>Serial voucher chiuso</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>